--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/zwayam_lite_management_system?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/zwayam_lite_management_system
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Vyshnav@01
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.open-in-view=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
