--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/zwayam_lite_management_system
+
 spring.datasource.username=root
 spring.datasource.password=Vyshnav@01
 
