--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+server.port=8088
+
 spring.datasource.url=jdbc:mysql://localhost:3306/zwayam_lite_management_system
 spring.datasource.username=root
-spring.datasource.password=Vyshnav@01
+spring.datasource.password=root
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
